--- a/api/redio/composer.json
+++ b/api/redio/composer.json
@@ -7,6 +7,8 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.12",
+        "lexik/jwt-authentication-bundle": "^2.11",
         "nelmio/cors-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/console": "5.2.*",
