--- a/api/redio/composer.json
+++ b/api/redio/composer.json
@@ -9,17 +9,22 @@
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.12",
-        "doctrine/doctrine-bundle": "^2.3",
+        "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "lexik/jwt-authentication-bundle": "^2.11",
+        "nelmio/api-doc-bundle": "^3.0",
         "nelmio/cors-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^6.1",
+        "stof/doctrine-extensions-bundle": "^1.6",
+        "symfony/asset": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
+        "symfony/serializer": "5.2.*",
+        "symfony/twig-bundle": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
@@ -68,5 +73,6 @@
             "allow-contrib": false,
             "require": "5.2.*"
         }
-    }
+    },
+    "description": "Redio - audio streaming music app"
 }
