--- a/api/redio/config/routes.yaml
+++ b/api/redio/config/routes.yaml
@@ -3,5 +3,5 @@
 #    controller: App\Controller\DefaultController::index
 
 
-api_login_check:
-    path: /api/login_check
+api_login:
+    path: /api/login
