--- a/api/redio/composer.json
+++ b/api/redio/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "friendsofsymfony/rest-bundle": "^3.0",
+        "gos/web-socket-bundle": "^3.7",
         "lexik/jwt-authentication-bundle": "^2.11",
         "nelmio/api-doc-bundle": "^3.0",
         "nelmio/cors-bundle": "^2.1",
