--- a/ui/ui/package.json
+++ b/ui/ui/package.json
@@ -13,6 +13,7 @@
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
     "vue-router": "4",
+    "vue-wamp": "^3.1.6",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
