--- a/api/redio/composer.json
+++ b/api/redio/composer.json
@@ -23,6 +23,7 @@
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/mercure-bundle": "^0.3.2",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/serializer": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
