--- a/api/redio/composer.json
+++ b/api/redio/composer.json
@@ -24,6 +24,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
         "symfony/mercure-bundle": "^0.3.2",
+        "symfony/mime": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/serializer": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
