--- a/api/redio/config/services.yaml
+++ b/api/redio/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     app.mercure_jwt_secret: '%env(MERCURE_JWT_SECRET)%'
+    app.directory.photo_storage: '%kernel.project_dir%/public/storage/photo'
 
 services:
     # default configuration for services in *this* file
@@ -30,3 +31,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\FileUploader\FileUploader:
+        arguments:
+            $targetDirectory: '%app.directory.photo_storage%'
