--- a/api/redio/composer.json
+++ b/api/redio/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^2.8",
         "friendsofsymfony/rest-bundle": "^3.0",
         "lexik/jwt-authentication-bundle": "^2.11",
+        "madcoda/php-youtube-api": "^1.2",
         "nelmio/api-doc-bundle": "^3.0",
         "nelmio/cors-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^6.1",
