--- a/api/redio/config/services.yaml
+++ b/api/redio/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     app.mercure_jwt_secret: '%env(MERCURE_JWT_SECRET)%'
+    app.youtube_api_key: '%env(YT_API_V3_KEY)%'
     app.directory.photo_storage: '%kernel.project_dir%/public/storage/photo'
 
 services:
@@ -35,3 +36,12 @@ services:
     App\Service\FileUploader\FileUploader:
         arguments:
             $targetDirectory: '%app.directory.photo_storage%'
+
+    youtubeApi.youtube:
+        class: Madcoda\Youtube\Youtube
+        arguments:
+            - {key: '%app.youtube_api_key%'}
+
+    App\Service\YoutubeService\YoutubeService:
+        arguments:
+            $client: '@youtubeApi.youtube'
