--- a/ui/ui/package.json
+++ b/ui/ui/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "vue": "^3.0.0",
     "vue-router": "4",
     "vuex": "^4.0.0"
