--- a/api/redio/config/packages/security.yaml
+++ b/api/redio/config/packages/security.yaml
@@ -38,7 +38,9 @@ security:
         push:
             pattern: ^/push
             stateless: true
-            anonymous: true
+            guard:
+                authenticators:
+                    - lexik_jwt_authentication.jwt_token_authenticator
 
 
     access_control:
